# wahooks

./: .gitignore  CLAUDE.md  LICENSE  README.md  docker-compose.prod.yml  docker-compose.yml  package.json  pnpm-lock.yaml
.github/workflows/: ci.yml  deploy-api.yml  deploy-mcp.yml  deploy-web.yml  publish-sdks.yml  release-cli.yml
apps/api/: .env.example  Dockerfile  deploy.sh  eslint.config.mjs  package.json  tsconfig.json
apps/web/: .env.example  next.config.mjs  next.config.ts  package.json  vercel.json
cli/: go.mod  go.sum  install.sh  main.go
cli/cmd/: billing.go  claude.go  connections.go  e2e.go  health.go  login.go  root.go  tokens.go  webhooks.go
docs/: introduction.mdx  mint.json
docs/api-reference/: authentication.mdx  overview.mdx
docs/cli/: authentication.mdx  connections.mdx  installation.mdx  tokens.mdx  webhooks.mdx
docs/concepts/: api-tokens.mdx  connections.mdx  webhook-signatures.mdx  webhooks.mdx
docs/quickstart/: create-connection.mdx  overview.mdx  receive-webhooks.mdx  send-messages.mdx
k8s/: README.md  api-deployment.yaml  api-service.yaml  hetzner-k3s-config.yaml  rbac.yaml
scripts/: e2e-test.sh  wahooks-cli.sh
sdks/channel/: manifest.json  package-lock.json  package.json
sdks/cli-npm/: install.js  (+1 more)
sdks/mcp/: Dockerfile  pyproject.toml
sdks/mcp/wahooks_mcp/: __init__.py  server.py
sdks/python/: pyproject.toml  test_sdk.py
sdks/python/wahooks/: __init__.py  client.py
terraform/: .gitignore  README.md  main.tf  outputs.tf  terraform.tfvars.example  variables.tf
tests/: TESTING_PLAN.md  load-test.py  scale-test.py
(+151 files in other folders)
