[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "wahooks"
version = "0.3.1"
description = "Official WAHooks SDK for Python"
requires-python = ">=3.8"
license = "MIT"
keywords = ["wahooks", "whatsapp", "api", "webhook", "sdk"]
dependencies = ["httpx>=0.24.0"]

[project.urls]
Repository = "https://github.com/dhruvyad/wahooks"
